examples/test/testpolicy18643.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18643
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key22: value44
      key21: value16
      key33: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value33
          key43: value40
          key40: value46
      podSelector:
        matchLabels:
          key18: value31
          key32: value37
          key15: value28
